force-app/main/default/objects/Project__c/fields/Actual_Advertised_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Advertised_Date__c</fullName>
    <label>Actual Advertised Date</label>
    <type>Date</type>
</CustomField>