force-app/main/default/objects/Project__c/fields/Actual_Construction_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Construction_Start_Date__c</fullName>
    <label>Actual Construction Start Date</label>
    <type>DateTime</type>
</CustomField>