force-app/main/default/objects/Project__c/fields/Contracted_Construction_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Contracted_Construction_End_Date__c</fullName>
    <label>Contracted Construction End Date</label>
    <type>Date</type>
</CustomField>