force-app/main/default/objects/Project__c/fields/Expenditures__c.field-meta.xml
<CustomField>
    <fullName>Expenditures__c</fullName>
    <label>Expenditures</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>