force-app/main/default/objects/Project__c/fields/Route__c.field-meta.xml
<CustomField>
    <fullName>Route__c</fullName>
    <label>Route</label>
    <type>TextArea</type>
</CustomField>