force-app/main/default/objects/Project__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Planned</fullName>
            </value>
            <value>
                <fullName>In Design</fullName>
            </value>
            <value>
                <fullName>Advertised</fullName>
            </value>
            <value>
                <fullName>Awarded</fullName>
            </value>
            <value>
                <fullName>Under Construction</fullName>
            </value>
            <value>
                <fullName>Construction Complete</fullName>
            </value>
            <value>
                <fullName>Close Out</fullName>
            </value>
            <value>
                <fullName>Project Complete</fullName>
            </value>
            <value>
                <fullName>Hold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>